2004-06-02  Albert Chin-A-Young  <china@thewrittenword.com>

	Committed by Andrew Cagney.
	* gdb/dictionary.c, gdb/gdbtypes.h: Remove trailing comma
	after last enum constant to avoid error from IBM C
	compiler.

2004-06-01  Michael Chastain  <mec.gnu@mindspring.com>

	Fix PR symtab/1661.
	* hpread.c (hpread_pxdb_needed): Call memset after alloca.
	(hpread_read_struct_type): Likewise.

2004-05-14  Michael Chastain  <mec.gnu@mindspring.com>

	Fix PR build/1648.
	* version.in: Fix corrupted zero-length file.

2004-05-13  Bryce McKinlay  <mckinlay@redhat.com>

	* dwarf2loc.c (find_location_expression): Use ANOFFSET to adjust
	base_address for shared libraries.

2004-05-11  Nick Roberts  <nickrob@gnu.org>

	* utils.c (defaulted_query): Just use the normal query input type
	when printing the annotations.

2004-05-01  Mark Kettenis  <kettenis@gnu.org>

	* dwarf2-frame.c (read_encoded_value): Handle DW_EH_PE_funcrel
	encondings.  Fixes PR gdb/1628.

2004-04-28  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
	    Andrew Cagney  <cagney@redhat.com>

	* configure.in (mips-sgi-irix5*): Define _KMEMUSER for
	<sys/proc.h>.
	* acconfig.h: Provide default _KMEMUSER value.
	* config.in, configure: Re-generate.
	* NEWS: Mention fix.

2004-04-28  Andrew Cagney  <cagney@redhat.com>

	* NEWS: Mention GDB 6.1.1.  Mention gdb/gdbserver/configure
	execute permission changed.  PR server/519.

2004-04-03  GDB Administrator  <gdbadmin@sourceware.org>

	GDB 6.1 released.
	* version.in: Bump to version 6.1.

2004-04-03  Andrew Cagney  <cagney@redhat.com>

	* PROBLEMS: Mention that GDB doesn't build on HP/UX 11.00.

2004-04-02  Joel Brobecker  <brobecker@gnat.com>

	Committed by Andrew Cagney <cagney@redhat.com>
        * alpha-tdep.c (alpha_heuristic_frame_unwind_cache): Do not take
        into account an instruction saving a register if we have already
        seen an earlier instruction saving that same register.

2004-04-31  J. Brobecker  <brobecker@gnat.com>
